# esp32-idf-projects

./: README.md
hfp_duplex/: sdkconfig
hfp_duplex/main/: CMakeLists.txt  FMTX.c  FMTX.h  app_hf_msg_set.c  bt_app_hf.c  bt_app_hf.h  keypad.c  keypad.h  main.c  pinout.h  sd_card_player.c  sd_card_player.h
hfp_duplex/main/components/ssd1306/: ssd1306_i2c.c
hfp_mp3/main/: app_hf_msg_set.c  bt_app_hf.c  main.c  sd_card_player.c  sd_card_player.h
hfp_mp3/main/components/ssd1306/: ssd1306_spi.c
sdspi_softap/: sdkconfig  sdkconfig.old
sdspi_softap/main/: sd_card_example_main.c
